--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @layer components {
+	body,
+	html {
+		-moz-osx-font-smoothing: grayscale;
+		-webkit-font-smoothing: antialiased;
+	}
 	body {
 		--brand-accent: #facc15;
 		/* https://ishadeed.com/article/defensive-css */
@@ -54,21 +59,20 @@
 	}
 }
 /* bg-yellow-200 dark:hover:bg-yellow-800 */
-a {
+/* a {
 	@apply dark:text-yellow-400 dark:hover:text-yellow-200 text-yellow-600 hover:text-yellow-700 hover:underline;
-}
+} */
 
-.prose h1 a,
+/* .prose h1 a,
 h2 a,
 h3 a,
 h4 a,
 h5 a,
 h6 a {
-	/* margin-left: 1rem; */
 	text-decoration: none !important;
 	@apply text-orange-700 dark:text-orange-400;
-}
-.prose h2::before {
+} */
+/* .prose h2::before {
 	content: '## ';
 }
 .prose h3::before {
@@ -76,7 +80,7 @@ h6 a {
 }
 .prose h4::before {
 	content: '#### ';
-}
+} */
 
 /* https://seek-oss.github.io/capsize/ */
 .capsize::before {
@@ -101,14 +105,14 @@ body {
 	--text-color: #ef4444;
 }
 /* .dark body {
-    --scrollbar-primary-color: #8db2e5;
-  } */
-/* body::-webkit-scrollbar-track {
-    background-color: var(--bg-color);
-  } */
-body::-webkit-scrollbar {
-	width: 0.5rem;
+	--scrollbar-primary-color: #8db2e5;
 }
+body::-webkit-scrollbar-track {
+	background-color: var(--bg-color);
+} */
+/* body::-webkit-scrollbar {
+	width: 0.5rem;
+} */
 body::-webkit-scrollbar-thumb {
 	background: linear-gradient(var(--scrollbar-primary-color), var(--text-color));
 	border-radius: 4px;
